feat: auth done till generating token
